--- a/app/src/main/res/layout/fragment_major_ask_detail.xml
+++ b/app/src/main/res/layout/fragment_major_ask_detail.xml
@@ -15,11 +15,13 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/myScrollView"
                 android:layout_alignParentTop="true"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
+                    android:paddingBottom="350dp"
                     android:layout_height="wrap_content">
                     <com.nju.View.SchoolFriendTextView
                         android:layout_width="wrap_content"
