--- a/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
@@ -14,13 +14,11 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_alignParentTop="true"
             android:id="@+id/mScrollView">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
-
                 android:layout_height="wrap_content">
                 <com.nju.View.SchoolFriendTextView
                     android:layout_width="wrap_content"
@@ -72,16 +70,40 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true" />
                 </RelativeLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="2010"
-                    android:layout_marginTop="@dimen/padding_left"
-                    android:paddingStart="@dimen/phone_apadding"
-                    android:paddingEnd="@dimen/phone_apadding"
-                    android:id="@+id/date_tv"
-                    />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="2010"
+                        android:layout_marginTop="@dimen/padding_left"
+                        android:paddingStart="@dimen/phone_apadding"
+                        android:paddingEnd="@dimen/phone_apadding"
+                        android:id="@+id/date_tv"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/phone_apadding"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="1"
+                        android:id="@+id/comment_number_tv"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="@string/comment_str"
+                        android:id="@+id/textView42"
+                        android:layout_alignParentBottom="true"
+                        android:layout_toStartOf="@+id/comment_number_tv" />
+                </RelativeLayout>
+
 
 
                 <RelativeLayout
@@ -124,7 +146,7 @@
                 <include layout="@layout/new_comment"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"/>
+                    android:layout_height="350dp"/>
             </LinearLayout>
         </ScrollView>
 
