--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -7,15 +7,39 @@
     android:layout_height="@dimen/bottom_choose_height"
     android:layout_alignParentBottom="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.nju.View.SchoolFriendAweTextView
+    <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center"
-        android:id="@+id/comment"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/write_comment_icon"
-        />
+
+        >
+        <com.nju.View.SchoolFriendAweTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/comment"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/write_comment_icon"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:textSize="8sp"
+            android:maxLength="3"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:ellipsize="end"
+            android:background="@drawable/red_circle"
+            android:id="@+id/textView36"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/comment"
+            android:layout_marginTop="9dp" />
+    </RelativeLayout>
     <com.nju.View.SchoolFriendAweTextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
