--- a/app/src/main/res/layout/alumni_question_item.xml
+++ b/app/src/main/res/layout/alumni_question_item.xml
@@ -2,6 +2,8 @@
 <RelativeLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:paddingStart="@dimen/phone_apadding"
+    android:paddingEnd="@dimen/phone_apadding"
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
@@ -15,6 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +25,7 @@
         android:textColor="@android:color/black"
         android:text="@string/asked_by"
         android:id="@+id/re_list_item_name"
-        android:layout_below="@+id/title_tv"
+        android:layout_below="@+id/question_gridview"
         android:layout_alignParentStart="true" />
     <TextView
         android:layout_width="wrap_content"
@@ -58,5 +61,12 @@
         android:layout_alignTop="@+id/count_tv"
         android:layout_toStartOf="@+id/count_tv" />
 
-
+    <com.nju.View.SchoolFriendGridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:numColumns="3"
+        android:id="@+id/question_gridview"
+        android:layout_below="@+id/title_tv"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
