--- a/app/src/main/res/layout/alumni_talk_item.xml
+++ b/app/src/main/res/layout/alumni_talk_item.xml
@@ -2,6 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:paddingStart="@dimen/phone_apadding"
+    android:paddingEnd="@dimen/phone_apadding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
