--- a/app/src/main/res/layout/alumni_voice_item.xml
+++ b/app/src/main/res/layout/alumni_voice_item.xml
@@ -2,6 +2,8 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="@dimen/phone_apadding"
+    android:paddingEnd="@dimen/phone_apadding"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
