--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -11,7 +11,7 @@
          android:scaleType="fitXY"
          android:layout_marginEnd="@dimen/padding_left"
          android:src="@drawable/cheese_4"
-         android:id="@+id/imageView" />
+         android:id="@+id/head_icon_img" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:id="@+id/name_tv"
         android:textColor="@color/light_blue"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/head_icon_img" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
         android:textColor="@android:color/black"
         android:id="@+id/content_tv"
         android:layout_below="@+id/name_tv"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/head_icon_img" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
         android:text="date"
         android:id="@+id/date_tv"
         android:layout_below="@+id/content_tv"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/head_icon_img" />
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_alignTop="@+id/date_tv"
