--- a/app/src/main/res/layout/fragment_major_ask.xml
+++ b/app/src/main/res/layout/fragment_major_ask.xml
@@ -10,8 +10,7 @@
         android:layout_height="match_parent">
         <ListView
             android:id="@+id/listView"
-            android:paddingStart="@dimen/phone_apadding"
-            android:paddingTop="@dimen/phone_apadding"
+            android:headerDividersEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
