--- a/app/src/main/res/layout/fragment_recommend_work.xml
+++ b/app/src/main/res/layout/fragment_recommend_work.xml
@@ -6,7 +6,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/phone_apadding"
         android:layout_alignParentTop="true">
         <android.support.v4.widget.SwipeRefreshLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,7 +14,7 @@
             android:layout_height="match_parent">
             <ListView
                 android:id="@+id/listView"
-                android:paddingStart="@dimen/phone_apadding"
+                android:headerDividersEnabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </android.support.v4.widget.SwipeRefreshLayout>
