--- a/app/src/main/res/layout/recommend_work_item_list_item.xml
+++ b/app/src/main/res/layout/recommend_work_item_list_item.xml
@@ -2,6 +2,8 @@
 <RelativeLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:paddingStart="@dimen/phone_apadding"
+    android:paddingEnd="@dimen/phone_apadding"
     android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
      >
